Corrects in styles align items

--- a/static/new_article.css
+++ b/static/new_article.css
@@ -21,6 +21,9 @@
     font-size: 20px;
 }
 .form-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 10px;
     width: 100%;
 }
